[package]
name = "mic"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.31"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
glob = "0.3.1"
image = "0.24.8"
lofty = "0.14.0"
prettytable-rs = "0.10.0"
rand = "0.8.5"
rayon = "1.8.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
